--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="lib/vue.js"></script>
     <script src="lib/vue-router.js"></script>
     <script type="module" src="main.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfYbprsTrXP_lV-n679yqesk9JPGnpJ9k"></script>    
 </body>
 
