--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Skranji|Overpass|Della+Respira" rel="stylesheet"> 
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' />    
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' /> 
+    <!-- <link rel="stylesheet" href="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js">    -->
     <link rel="stylesheet" href="css/app.css">
     <title>Fixr</title>
 </head>
