--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Skranji|Overpass|Della+Respira" rel="stylesheet"> 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' /> 
-    <!-- <link rel="stylesheet" href="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js">    -->
     <link rel="stylesheet" href="css/app.css">
     <title>Fixr</title>
 </head>
@@ -18,6 +17,7 @@
     <script src="lib/vue-router.js"></script>
     <script type="module" src="main.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfYbprsTrXP_lV-n679yqesk9JPGnpJ9k&libraries=places"></script>    
 </body>
